force-app/main/default/objects/Job_Application_Event__e/Job_Application_Event__e.object-meta.xml
<CustomObject>
    <label>Job Application Event</label>
    <pluralLabel>Job Application Events</pluralLabel>
</CustomObject>