force-app/main/default/objects/Job_Application_Event__e/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <label>Candidate Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>