force-app/main/default/objects/Job_Application_Event__e/fields/Candidate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone__c</fullName>
    <label>Candidate Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>