force-app/main/default/objects/Job_Application_Event__e/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <label>Job Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>