force-app/main/default/objects/Job_Application_Event__e/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>