force-app/main/default/objects/Job_Application_Event__e/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>