force-app/main/default/objects/Job_Application_Event__e/fields/Portal_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Application_ID__c</fullName>
    <label>Portal Application ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>